@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2018-04-03">
+<para>
+<link doc="en/download.xml">nginx-1.13.11</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2018-03-23">
 <para>
 <link url="https://unit.nginx.org/">unit-0.7</link>
